Refactor in to DataProvider Model
